--- a/_posts/2022-11-22-note7.markdown
+++ b/_posts/2022-11-22-note7.markdown
@@ -267,7 +267,7 @@ exit : Q
 ### branch - merge
 
 * 현재 branch의 commit을 다른 branch의 commit에 합치는 것
-* 27번이 생기지 않는 이유는 main의 24번은 b1의 분기 이후에 변경된 적이 없어, b1브랜치의 버전을 main 24번 이후에 그대로 이어 붙혀도 문제가 되지 않는다.
+* 27번이 생기지 않는 이유는 main의 24번은 b1의 분기 이후에 변경된 적이 없어, b1브랜치의 버전을 main 24번 이후에 그대로 이어 붙여도 문제가 되지 않는다.
 * 새로운 napshot을 만들지 않는다.
 * 한번 main과 합친경우 새로 생성한 브랜치를 지우고 새로 만들어서 작업해야 충돌이 안남
 
