--- a/_posts/2022-11-25-note16.markdown
+++ b/_posts/2022-11-25-note16.markdown
@@ -7,8 +7,9 @@ categories: jekyll update
 
 
 
-## css폴더 별도로 만들어서 라이브로 띄워 주석으로 막아가면서 예습
-## HTML+CSS+자바스크립트 웹 표준의 정석 책 167~291p까지 예습
+#### css폴더 별도로 만들어서 라이브로 띄워 주석으로 막아가면서 예습
+
+#### HTML+CSS+자바스크립트 웹 표준의 정석 책 167~291p까지 예습
 
 
 
