--- a/_posts/2022-11-25-note15.markdown
+++ b/_posts/2022-11-25-note15.markdown
@@ -121,7 +121,7 @@ name=aaa&age=22 <- pst 요청은 message-body부분에
 * URL에 노출 안됨 -> URL에 테이터를 포함해야 하는 경우에 적합하지 않다. ex)-> 게시글 조회 URL은 포스트 방식에 적합하지 않음
 * 여러 개의 파일 첨부 가능
 * 용량 제한이 없음
-* 
+* mltiple을 붙이면 여러개 선택 가능
 *
 *
 *
