--- a/_posts/2022-11-25-note16.markdown
+++ b/_posts/2022-11-25-note16.markdown
@@ -11,7 +11,7 @@ categories: jekyll update
 
 #### HTML+CSS+자바스크립트 웹 표준의 정석 책 167~291p까지 예습
 
-
+* Blog 폰트 글꼴 글씨체 글씨 크기 배경 글자 색 등등 바꿈
 
 
 <br><br><br>
