--- a/_posts/2022-11-23-note9.markdown
+++ b/_posts/2022-11-23-note9.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "HTML,HTTP 수업1"
+title:  "HTML,HTTP 수업"
 date:   2022-11-24 09:10:33 +0900
 categories: jekyll update
 ---
