--- a/_posts/2022-11-25-note16.markdown
+++ b/_posts/2022-11-25-note16.markdown
@@ -16,6 +16,10 @@ categories: jekyll update
 
 * git blog를 HTML과 CSS를 이용하여 만들기
 
+* [제작중인 블로그](https://Melon-jy.github.io/html/)
+
+
+
 
 <br><br><br>
 
