--- a/_posts/2022-11-23-note12.markdown
+++ b/_posts/2022-11-23-note12.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "리눅스 기본 명령어 조사 과제"
 date:   2022-11-23 09:40:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 ## 과제 목표
