--- a/_posts/2022-11-25-note15.markdown
+++ b/_posts/2022-11-25-note15.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "HTTP와 웹 네트워크"
 date:   2022-11-25 09:10:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 # 네트워킹(NetWorking)
