--- a/_posts/2022-11-20-note3.markdown
+++ b/_posts/2022-11-20-note3.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: 비트캠프 과제3
 date:   2022-11-19 02:15:30 +0900
-categories: jekyll update
+categories: Post
 ---
 
 <h2 id="MD 문법(마크 문법)이란?" class="common__H2-sc-11baoah-1 fagqOB">MD 문법(마크 문법)이란?</h2>
