--- a/_posts/2022-11-21-note4.markdown
+++ b/_posts/2022-11-21-note4.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "비트캠프 과제4"
 date:   2022-11-21 11:40:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 # Local git 저장소를 만들고 github.com의 개인 저장소와 연결하라
