--- a/_posts/2022-11-22-note7.markdown
+++ b/_posts/2022-11-22-note7.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "branch 다루기 수업"
 date:   2022-11-22 09:40:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 # VM branch
