--- a/_posts/2022-11-23-note11.markdown
+++ b/_posts/2022-11-23-note11.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "HTML, HTTP 배경 조사 과제"
 date:   2022-11-23 14:10:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 # HTTP를 만든 사람
