--- a/_posts/2022-11-28-note17.markdown
+++ b/_posts/2022-11-28-note17.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "css 사용법"
 date:   2022-11-28 09:27:33 +0900
-categories: jekyll update
+categories: Post
 ---
 
 ## css 사용법
@@ -76,8 +76,27 @@ categories: jekyll update
 * 연속화(중첩)를 캐스케이드(Cascade) 라고 한다
 * specificity - 스펙시피시티
 * body #id .class 순서로 값이 크고 값이 같은 경우 위의 것을 우선 순위로 변환함
-* 
 
+
+### 예제 4-2
+
+* Specificity 계산법
+* *                   :0
+* 태그,Pseudo Selector:1
+* 클래스, 조건        :10
+* 아이디              :100
+* 인라인스타일        :1000
+
+* font-size 스타일은 자식 태그에게 상속해 준다.자식 태그는 자체적으로 지정된 스타일이 없으면 부모 태그로부터 상속 받은 스타일을 사용한다.
+* 
+* 
+* 
+* 
+* 
+* 
+* 
+* 
+* 
 
 
 
