--- a/_posts/2022-11-28-note17.markdown
+++ b/_posts/2022-11-28-note17.markdown
@@ -88,8 +88,8 @@ categories: Post
 * 인라인스타일        :1000
 
 * font-size 스타일은 자식 태그에게 상속해 준다.자식 태그는 자체적으로 지정된 스타일이 없으면 부모 태그로부터 상속 받은 스타일을 사용한다.
-* 
-* 
+* block 태그는 너비 높이 지정 가능
+* inline 태그는 임의적으로 너비 높이 지정 불가
 * 
 * 
 * 
