--- a/_posts/2022-11-29-note20.markdown
+++ b/_posts/2022-11-29-note20.markdown
@@ -9,27 +9,32 @@ categories: Post
 
 * margin : 테두리 바깥 여백
 * padding : 테두리 안쪽 여백
+* border-방향-스타일: solid, dashed, dotted ;
+* 짧은 명령으로 border-방향: 컬러 스타일 너비 ; 로 적어도 됨
+### Raster 폰트 Vector 폰트
+
+
+* Raster font : px 단위로 폰트를 나타냄, 출력 속도가 빠름, 폰트 크기에 따라 각 문자를 만듬, 계단 현상이 발생
+* vector font : 글자를 그리는 명령어를 작성한다, 출력 속도가 느리다 (요즘은 CPU가 빠르기 때문에 상관없다), 계단 현상이 발생하지 않음.
+* ex) true-type font : 이미지 단순 ->파일크기 작아짐, 이미지 복잡 파일크기 늘어남
+* ex) courier :이미지 복잡도와 파일크기가 편하지않음
+* 폰트 크기는 높이 기준
+
+## css
+
+* no-repeat : 반복하지 않게 하는 것
+* url('___') : css에 이미지를 넣는 법
+* inline-block : 영역 안에서 위 아래로 놓이지 않고 옆으로 놓이게 하기
 * 
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
+* 
+* 
+* 
+* 
+* 
+* 
+* 
+* 
+* 
 
 
 
