--- a/_posts/2022-11-29-note20.markdown
+++ b/_posts/2022-11-29-note20.markdown
@@ -38,6 +38,12 @@ categories: Post
 
 * if 분기 문장 - js용어
 
+### 7-11
+
+* 네이버는 이미지가 아닌 백그라운드로 아이콘을 만듬
+* 트위터는 색이 단조롭기 때문에 텍스트로 아이콘을 만듬
+* 
+
 
 <br><br><br>
 
