--- a/_posts/2022-12-02-note23.markdown
+++ b/_posts/2022-12-02-note23.markdown
@@ -239,10 +239,14 @@ tag1.onclick:
 ```
 (1)학생명단.(2)find((3)"홍길동")
 ```
-* (1) 객체
-* (2) 함수
-* (3) 함수가 기본 데이터를 다룰때 사용할 값
-* (2->1) 함수가 일할때 참고할 데이터
+* (1) 객체 : 기본데이터
+* (2) 함수 : 작업자(operator)
+* (3) 함수가 기본 데이터를 다룰때 사용할 값 : 작업에 사용하는 부가데이터
+* (2->1) 함수가 일할때 참고할 데이터 : 학생 정보 덩어리(객체)
+* 함수 = method = operator
+
+#### 참고 Java Script 와 ECMA Script의 관계
+
 
 
 
