--- a/_posts/2022-12-02-note23.markdown
+++ b/_posts/2022-12-02-note23.markdown
@@ -245,23 +245,86 @@ tag1.onclick:
 * (2->1) 함수가 일할때 참고할 데이터 : 학생 정보 덩어리(객체)
 * 함수 = method = operator
 
+
 #### 참고 Java Script 와 ECMA Script의 관계
 
+#### 웹페이지 조립
+
+* HTML을 part part로 조립하는 것
+``` part1.html
+<p>안녕하세요!!</p>
+```
+
+* header.html, main.html, footer.html 등의 part를 하나의 웹페이지에 삽입할 수 있음
+``` exam06.HTML
+<script>
+var tag1 = document.getElementById('btn1')
+
+tag1.onclick = function() {
+  var xhr = new XMLHttpRequest(); // <== 서버에 따로 요청을 할 때 사용하는 도구
+  xhr.open('GET', '/havascript/ex00/exam06', false); // <== 요청할 자우너의 경로 등을 설정한 후 서버와 연결
+  xhr.send(); // <== 서버에 HTTP 요청 정보를 보낸다. 서버가 응답하면 함수를 종료하고 리턴한다.
+
+  // 서버가 보낸 데이터를 div태그에 넣기
+  var tag2 = document.getElementById('d1');
+  tag2.innerHTML = xhr.responseText; // <==서버에 받아 온 응답 결과를 꺼내 <div> 태그에 넣는다
+}
+```
+* 아래 코드를 위에 조립하여 넣는다
+``` exam06-part1.HTML
+<header></header>
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+</ul>
+```
+
+#### 서버에 자원을 요청 : server-side rendering vsclient-side rendering
+
+* HTML에서 서버로 요청하고 서버에서 HTML을 보내고 그대로 HTML에 삽입한다 <= server-side rendering 방식 : 서버에서 HTML을 만들어 준다
+* server-side rendering: ex)JSP, Thymleaf 등
+* HTML에서 서버에 요청하고 서버에서 JSON이나 XML데이터를 보낸후 데이터를 받아서 HTML을 만들어 삽입한다 <= client-side rendering 방식: 클라이언트에서 HTML을 만든다 프론트엔드의 방식
+* client-side rendering: ex)AJAX기술 -> 
+```exam06
+var ul = document.getElementById('title-list');
+ul.innerHTML = xhr.responseText;
 
 
+```
+#### JSON 포맷
+``` object literal
+var obj = {
+  name:"홍길도",
+  age: 20,
+  working:false,
+  hello:function(){---
+  }
+}
+```
+* JavaScript의 object literal 문법을 참고해서 만든 포맷
+```
+{
+   "name":"홍길동,
+   "age":20,
+   "working"=false
+}
+```
+* JSON포맷
 
-
-
-
-
-
-
-
-
-
-
-
-
+#### JSON Built-in Object
+```
+JSON. Parse(JSON 포맷 문자열)
+```
+* 자바 스크립트 객체
+* JSON.staringify
+```
+for (var i = 0; i< title List.length; i++) {
+  var li = document.createElent("li);
+  li.innerHTML = titleList[i];
+  ul.appendchild(li);
+}
+```
 
 
 
