--- a/_posts/2022-12-05-note25.markdown
+++ b/_posts/2022-12-05-note25.markdown
@@ -74,7 +74,9 @@ var v1 = "hello"; : v1=변수
 
 * initializer : 변수 선언문에 값 할당 문장 (초기화)
 
-
+* 변수 사용 우선 순위
+* const -> let -> var
+* 상수는 메모리의 값을 바꿀 수 없다
 
 
 
